--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <version>5.1.6</version>
         </dependency>
 
+        <!--Junit-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 
     <build>
